--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -12,18 +12,24 @@ body {
 
 .link-underline {
     border-bottom-width: 0;
-    background-image: linear-gradient(transparent, transparent), linear-gradient(#fff, #fff);
+    background-image: linear-gradient(transparent, transparent), linear-gradient(#1fc47a, #1fc47a);
     background-size: 0 3px;
     background-position: 0 100%;
     background-repeat: no-repeat;
     transition: background-size .5s ease-in-out;
 }
 
+.link-underline:hover {
+    background-size: 100% 3px;
+    background-position: 0 100%
+}
+
 .link-underline-black {
     background-image: linear-gradient(transparent, transparent), linear-gradient(#1fc47a, #1fc47a)
 }
 
-.link-underline:hover {
-    background-size: 100% 3px;
-    background-position: 0 100%
+
+
+#buttomIns:hover{
+    background-color: #49018c;
 }
