--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -33,3 +33,31 @@ body {
 #buttomIns:hover{
     background-color: #49018c;
 }
+
+.bg-video {
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.bg-video:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3); /* adicione um fundo escuro para melhor legibilidade do texto */
+    z-index: -1;
+}
+
+.bg-video video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+}
