--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Kameron:wght@400;700&family=Montserrat:ital,wght@0,400;0,600;0,800;0,900;1,300&family=Poppins:wght@200;400;600&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@200;400;600&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Kameron:wght@400;700&family=Poppins:wght@200;400;600&display=swap');
 
 @font-face {
