--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -1,16 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Kameron:wght@400;700&family=Montserrat:ital,wght@0,400;0,600;0,800;0,900;1,300&family=Poppins:wght@200;400;600&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@200;400;600&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Kameron:wght@400;700&family=Poppins:wght@200;400;600&display=swap');
-
-@font-face {
-    font-family: 'OringTech';
-    src: url('./fonts/origin_tech/OriginTechpersonaluse.ttf') format('truetype');
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -82,3 +71,76 @@ body {
     width: auto;
     height: auto;
 }
+
+.card {
+  width: 190px;
+  height: 254px;
+  background: white;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-self: center;
+  place-content: center;
+  place-items: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.card > span {
+  z-index: 1;
+  /* color: white; */
+  font-size: 2em;
+  background: white;
+  
+}
+
+.card::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(0, 183, 255)), to(rgb(255, 48, 255)));
+    background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
+    height: 130%;
+    -webkit-animation: rotBGimg 5s linear infinite;
+            animation: rotBGimg 5s linear infinite;
+    -webkit-transition: all 0.2s linear;
+    transition: all 0.1s linear;
+}
+
+@-webkit-keyframes rotBGimg {
+    from {
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+    }
+}
+
+@keyframes rotBGimg {
+    from {
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+    }
+}
+
+.card::after {
+  content: '';
+  position: absolute;
+  background: #2200B8;
+  /* opacity: 10%; */
+  inset: 5px;
+  border-radius: 15px;
+}  
+/* .card:hover:before {
+  background-image: linear-gradient(180deg, rgb(81, 255, 0), purple);
+  animation: rotBGimg 3.5s linear infinite;
+} */
+
