--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -144,3 +144,88 @@ body {
   animation: rotBGimg 3.5s linear infinite;
 } */
 
+
+
+.cardSpeaker {
+    width: 20em;
+    height: 28em;
+    background: #171717;
+    -webkit-transition: 1s ease-in-out;
+    transition: 1s ease-in-out;
+    -webkit-clip-path: polygon(50px 100%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
+            clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
+    border-radius: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+}
+
+.cardSpeaker span {
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    display: block;
+    font-size: 1em;
+}
+
+.cardSpeaker .info {
+    font-weight: 500;
+    color: cyan;
+    display: block;
+    text-align: center;
+    font-size: 1.5em;
+    margin: 1.9em;
+}
+
+.cardSpeaker .img {
+    width: 15vh;
+    height: 10vh;
+    background: white;
+    border-radius: 15px;
+    margin: auto;
+    border-radius: 20px;
+}
+
+.cardSpeaker .share {
+    margin-top: 1em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 1em;
+}
+
+.cardSpeaker a {
+    color: white;
+    -webkit-transition: .4s ease-in-out;
+    transition: .4s ease-in-out;
+}
+
+.cardSpeaker a:hover {
+    color: red;
+}
+
+.cardSpeaker button {
+    padding: 0.8em 1.7em;
+    display: block;
+    margin: auto;
+    border-radius: 25px;
+    border: none;
+    font-weight: bold;
+    background: #ffffff;
+    color: rgb(0, 0, 0);
+    -webkit-transition: .4s ease-in-out;
+    transition: .4s ease-in-out;
+}
+
+.cardSpeaker button:hover {
+    background: red;
+    color: white;
+    cursor: pointer;
+}
