--- a/src/css/courses.css
+++ b/src/css/courses.css
@@ -151,6 +151,26 @@
   .title-courses h2::after {
     margin-top: 16px;
   }
+  .card-courses{
+    width: 100%;
+    height: 90%;
+  }
+}
+@media screen and (max-width: 1920px) {
+  .title-courses span {
+    font-size: 14px;
+  }
+  .title-courses h2 {
+    padding: 0 15px var(--font-64px) 15px;
+    font-size: 32px;
+  }
+  .title-courses h2::after {
+    margin-top: 16px;
+  }
+  .card-courses{
+    width: 40vh;
+    height: 90%;
+  }
 }
 
 .social-info {
@@ -239,6 +259,7 @@
   line-height: 1.5em;
   transition: all 0.5s;
   color: var(--color-light);
+  text-align: justify;
 }
 
 .card-courses .course-info span {
