--- a/src/css/global.css
+++ b/src/css/global.css
@@ -168,7 +168,7 @@ img {
   width: 100%;
   height: 700px;
   background-color: var(--color-secondary);
-  background-image: url("/src/assets/cover-img.webp");
+  background-image: url("/src/assets/caisTech2023/imgCaisTech/bgCtech.svg");
   transform: scaleX(1);
   background-size: cover;
   background-attachment: fixed;
