--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -5,6 +5,8 @@
   width: 100%;
   background: rgba(6, 0, 24, 0.8);
   transition: all 0.3s;
+  position: fixed;
+
 }
 
 .navbar {
@@ -79,6 +81,7 @@
   .navigation {
     padding: 0px 0;
     z-index: 0;
+    position: absolute;
   }
   .navbar .navbar-brand {
     width: 55px;
