--- a/src/css/global.css
+++ b/src/css/global.css
@@ -85,6 +85,12 @@ body {
   --color-black: #111024;
   --color-gray: #cecdea;
   --color-light: #f3f7f4;
+  --color-ctech-10: #8694B6;
+  --color-ctech-50: #0B4EDF;
+  --color-ctech-100: #3500A0;
+  --color-ctech-200: #6C21ED;
+  --color-ctech-900: #0A032B;
+  
   /* -- */
   /* tamanhos de fontes e espaçamentos */
   --font-16px: 1rem;
@@ -168,7 +174,7 @@ img {
   width: 100%;
   height: 700px;
   background-color: var(--color-secondary);
-  background-image: url("/src/assets/caisTech2023/imgCaisTech/bgCtech.svg");
+  background-image: url("/src/assets/caisTech2023/imgCaisTech/bgEvento.jpg");
   transform: scaleX(1);
   background-size: cover;
   background-attachment: fixed;
