--- a/src/css/global.css
+++ b/src/css/global.css
@@ -174,7 +174,7 @@ img {
   width: 100%;
   height: 700px;
   background-color: var(--color-secondary);
-  background-image: url("/src/assets/caisTech2023/imgCaisTech/bgEvento.jpg");
+  background-image: url("/src/assets/caisTech2023/imgCaisTech/bgEvento.webp");
   transform: scaleX(1);
   background-size: cover;
   background-attachment: fixed;
