--- a/src/css/global.css
+++ b/src/css/global.css
@@ -169,20 +169,20 @@ img {
 }
 
 #cover {
-  position: absolute;
+  /* position: absolute; */
   z-index: -1;
   width: 100%;
-  height: 700px;
-  background-color: var(--color-secondary);
-  background-image: url("/src/assets/caisTech2023/imgCaisTech/bgEvento.webp");
+  height: 550px;
+  /* background-color: var(--color-secondary);
+  background-image: url("/src/assets/caisTech2023/imgCaisTech/bgEvento.jpg");
   transform: scaleX(1);
   background-size: cover;
   background-attachment: fixed;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 }
 
 #cover::after {
-  position: absolute;
+  /* position: absolute; */
   content: "";
   width: 100%;
   height: 100%;
@@ -191,7 +191,12 @@ img {
 
 @media screen and (max-width: 576px) {
   #cover {
-    height: 600px;
+    height: 250px;
+  }
+}
+@media screen and (max-width: 780px) {
+  #cover {
+    height: 270px;
   }
 }
 
