--- a/src/css/wrapper.css
+++ b/src/css/wrapper.css
@@ -55,7 +55,7 @@
 }
 
 .content-area-wrapper h6 {
-  width: 470px;
+  /* width: 470px; */
   margin-left: -100px;
   margin-bottom: -500px;
   text-transform: uppercase;
@@ -104,8 +104,8 @@
     justify-content: end;
     text-align: end;
     background-color: rgba(151, 235, 193, 0.1) !important;
-    /* margin-left: 0px;
-    margin-bottom: 100px; */
+    margin-left: 0px;
+    /* margin-bottom: 100px; */
   }
   .content-area-wrapper p {
     text-align: center;
@@ -131,7 +131,7 @@
     justify-content: center;
   }
   .content-area-wrapper h1 {
-    font-size: var(--font-48px);
+    font-size: var(--font-32px);
     justify-content: center;
     text-align: center;
   }
@@ -144,8 +144,8 @@
   .content-area-wrapper h6 {
     width: 100%;
     font-size: 16px;
-    justify-content: end;
-    text-align: end;
+    justify-content: center;
+    text-align: center;
     background-color: rgba(151, 235, 193, 0.1) !important;
   }
   .content-area-wrapper p {
