--- a/src/css/global.css
+++ b/src/css/global.css
@@ -172,17 +172,17 @@ img {
   /* position: absolute; */
   z-index: -1;
   width: 100%;
-  height: 650px;
+  height: 100%;
   /* background-color: var(--color-secondary);
-  background-image: url("/src/assets/caisTech2023/imgCaisTech/bgEvento.jpg");
+  background-image: url("/src/assets/caisTech2023/imgCaisTech/bgEvento.jpg"); */
   transform: scaleX(1);
-  background-size: cover;
+  /* background-size: cover;
   background-attachment: fixed;
-  background-repeat: no-repeat; */
+  background-repeat: no-repeat;  */
 }
 
 #cover::after {
-  /* position: absolute; */
+  position: absolute;
   content: "";
   width: 100%;
   height: 100%;
@@ -191,12 +191,12 @@ img {
 
 @media screen and (max-width: 576px) {
   #cover {
-    height: 250px;
+    height: 600px;
   }
 }
 @media screen and (max-width: 780px) {
   #cover {
-    height: 270px;
+    height: 200px;
   }
 }
 
