--- a/src/css/global.css
+++ b/src/css/global.css
@@ -170,6 +170,7 @@ img {
 
 #cover {
   position: relative; 
+  padding-top: 5.4rem;
   z-index: -1;
   width: 100%;
   height: 100% ;
@@ -192,11 +193,13 @@ img {
 @media screen and (max-width: 350px) {
   #cover {
     height: 10vh;
+    
   }
 }
 @media screen and (max-width:499px) {
   #cover {
     height: 50vh;
+    padding-top: 4.2rem;
   }
 }
 
