--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,4 +20,4 @@
 @import "/src/css/sidenav.css";
 @import "/src/css/speaker.css";
 
-@import "src/css/sliders.css";
+@import "/src/css/sliders.css"
