--- a/src/css/sliders.css
+++ b/src/css/sliders.css
@@ -1,5 +1,6 @@
 .swiper {
-    width: 100%;
+    
+    width:100%;
     height: 100%;
 }
 
@@ -17,4 +18,12 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+
+}
+
+@media (min-width:640px) {
+    .swiper {
+        width:100%;
+        height: 25rem;
+    }
 }
