--- a/src/css/courses.css
+++ b/src/css/courses.css
@@ -58,7 +58,7 @@
 .card-img-box img {
   border-radius: 0px;
   width: 100%;
-  height: 100%;
+  height: 50%;
   object-fit: cover;
   top: 0;
   left: 0;
@@ -133,7 +133,7 @@
     font-size: var(--font-28px);
   }
   .card-courses {
-    margin: 10px 0;
+    margin: 5px 0;
   }
   .card-content-box h3 {
     font-size: var(--font-24px);
@@ -169,7 +169,7 @@
   }
   .card-courses{
     width: 40vh;
-    height: 90%;
+    height: 40em;
   }
 }
 
